<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade_1"
    tools:context=".EditUserActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--progress bar for loading indicator-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:src="@drawable/cardiac"></ImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idname"
                style="@style/textInputLayout"
                android:layout_width="394dp"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="Enter Your Name"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idSPressure"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="Systolic Pressure(mm/Hg)"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idsPressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--edit text for course image link-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/iddPressure"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="Diostolic Prressure (mm/Hg)"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idDPressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--edit text for course link-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idlll"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="Heart Rate (bpm)"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idHeart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--edit text for course description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idcc"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="Enter Your Comment"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idComment"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textImeMultiLine|textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:weightSum="2"
                android:orientation="horizontal"
                >
                <!--button for adding a new course-->
                <Button
                    android:id="@+id/idBtnUpdate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/custom_button_back"
                    android:text="Update"
                    android:textAllCaps="false" />
                <Button
                    android:id="@+id/idBtnDelete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/custom_button_back"
                    android:text="Delete"
                    android:textAllCaps="false" />
            </LinearLayout>

            <!--button for adding a new course-->



        </LinearLayout>

        <ProgressBar
            android:id="@+id/idPBLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_back"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>