<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRLHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade_1"
    tools:context=".MainActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/user_rv_item" />
    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/idFABAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_add"
        app:background="@color/blue_shade_1"
        app:backgroundTint="@color/blue_shade_2"
        app:tint="@color/white" />
</RelativeLayout>
