...
        android:layout_below="@id/BDiastolicPressure"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/idBtnU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BHeartRate"
        android:layout_marginTop="16dp"

        android:text="UPDATE OR DELETE" />
...
